--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,31 @@
-version: '3'
+version: "3"
 services:
-  postgres: 
-    image: 'postgres:latest'
+  client:
+    image: "jaredto2/multi-client"
+    mem_limit: 128m
+    hostname: client
+  server:
+    image: "jaredto2/multi-server"
+    mem_limit: 128m
+    hostname: api
     environment:
-      - POSTGRES_PASSWORD=postgres_password
-  redis:
-    image: 'redis:latest'
-  nginx:
-    restart: always
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./nginx
-    ports:
-      - '3050:80'
-  api:
-    build: 
-      dockerfile: Dockerfile.dev
-      context: ./server
-    volumes:
-      - /app/node_modules
-      - ./server:/app
-    environment:
-      - REDIS_HOST=redis
+      - REDIS_HOST=master.multi-docker-redis.4gnvmo.use2.cache.amazonaws.com
       - REDIS_PORT=6379
       - PGUSER=postgres
-      - PGHOST=postgres
-      - PGDATABASE=postgres
+      - PGHOST=multi-docker-postgres.cdwkwwu68whd.us-east-2.rds.amazonaws.com
+      - PGDATABASE=multi-docker-postgres
       - PGPASSWORD=postgres_password
       - PGPORT=5432
-  client:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./client
-    volumes: 
-      - /app/node_modules
-      - ./client:/app
-    environment:
-      - WDS_SOCKET_PORT=0
   worker:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./worker
-    volumes:
-      - /app/node_modules
-      - ./worker:/app
-    environment: 
-      - REDIS_HOST=redis
-      - REDIST_PORT=6379
+    image: "jaredto2/multi-worker"
+    mem_limit: 128m
+    hostname: worker
+    environment:
+      - REDIS_HOST=master.multi-docker-redis.4gnvmo.use2.cache.amazonaws.com
+      - REDIS_PORT=6379
+  nginx:
+    image: "jaredto2/multi-nginx"
+    mem_limit: 128m
+    hostname: nginx
+    ports:
+      - "80:80"
